<resources>
    <string name="app_name">VendMachine M4</string>
    <string name="txt_0">0</string>
    <string name="txt_1">1</string>
    <string name="txt_2">2</string>
    <string name="txt_3">3</string>
    <string name="txt_4">4</string>
    <string name="txt_5">5</string>
    <string name="txt_6">6</string>
    <string name="txt_7">7</string>
    <string name="txt_8">8</string>
    <string name="txt_9">9</string>
    <string name="txt_00">00</string>
    <string name="txt_del">DEL</string>
    <string name="txt_cancel_key">CANCEL</string>
    <string name="txt_dot">.</string>
    <string name="txt_placeholder">Placeholder</string>
    <string name="txt_image_description">image</string>
    <string name="txt_wait">Please wait...</string>
    <string name="txt_select_service">Select Services</string>
    <string name="txt_search">Search</string>
    <string name="txt_name">Name</string>
    <string name="txt_na">N/A</string>
    <string name="txt_title">Title</string>
    <string name="txt_message">Message</string>
    <string name="txt_ok">Ok</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="txt_rm_0">RM 0.00</string>
    <string name="txt_count">Total Count:</string>
    <string name="txt_no_transaction">No Transaction</string>
    <string name="txt_no_settlements">No Settlement Record</string>
    <string name="txt_no_products">No Product</string>
    <string name="txt_no_programs">No Program</string>
    <string name="txt_no_logs">No Activity Log</string>
    <string name="txt_activity">Activity: </string>
    <string name="txt_function">Function: </string>
    <string name="txt_terminal_user">Terminal User: </string>
    <string name="txt_account">Account No.: </string>
    <string name="txt_program_code">Program Code: </string>
    <string name="txt_invoice">Invoice No.: </string>
    <string name="txt_batch">Batch No.: </string>
    <string name="txt_extra_info">Extra Info: </string>
    <string name="txt_date">Date/Time: </string>
    <string name="txt_edit_title">Edit Quantity</string>
    <string name="txt_edit_message">Please enter new quantity of the item.</string>
    <string name="txt_edit_name">Name :</string>
    <string name="txt_edit_barcode">Barcode :</string>
    <string name="txt_edit_price">Price :</string>
    <string name="txt_edit_quantity">Quantity :</string>
    <string name="txt_edit_minus">-1</string>
    <string name="txt_edit_plus">+1</string>
    <string name="txt_customer_copy">Customer Copy</string>
    <string name="txt_merchant_copy">Merchant Copy</string>
    <string-array name="spinner_items_degree">
        <item>30</item>
        <item>29</item>
        <item>28</item>
        <item>27</item>
        <item>26</item>
        <item>25</item>
        <item>24</item>
        <item>23</item>
        <item>22</item>
        <item>21</item>
        <item>20</item>
        <item>19</item>
        <item>18</item>
        <item>17</item>
        <item>16</item>
        <item>15</item>
        <item>14</item>
        <item>13</item>
        <item>12</item>
        <item>11</item>
        <item>10</item>
        <item>9</item>
        <item>8</item>
        <item>7</item>
        <item>6</item>
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
        <item>0</item>
        <item>-1</item>
        <item>-2</item>
        <item>-3</item>
        <item>-4</item>
        <item>-5</item>
        <item>-6</item>
        <item>-7</item>
        <item>-8</item>
        <item>-9</item>
        <item>-10</item>
        <item>-11</item>
        <item>-12</item>
        <item>-13</item>
        <item>-14</item>
        <item>-15</item>
        <item>-16</item>
        <item>-17</item>
        <item>-18</item>
        <item>-19</item>
        <item>-20</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="action_bill_view">View Stored Bill order</string>
    <string name="enable_start">Click Run to start...</string>
    <string name="check_connection">Check connection</string>
    <string name="action_download_file">Open download file</string>
    <string name="title_activity_list_files">ListFiles</string>
    <string name="no_file_data_error">No file data!</string>
    <string name="unable_to_load">Unable to load file!</string>
    <string name="title_activity_bill_validator">BillValidator</string>
    <string name="main_instruction">Connect ITL device to USB and press the button to activate.</string>
    <string name="connect_instruction">Connecting to device. Please wait...</string>
    <string name="firmware_title">Firmware: </string>
    <string name="device_title">Device: </string>
    <string name="dataset_title">Dataset: </string>
    <string name="serial_number_title">Serial number: </string>
    <string name="title_activity_note_float">NoteFloat</string>
    <string name="title_activity_smart_payout">SmartPayout</string>
    <string name="title_activity_settings">Settings</string>
    <string name="qr_code_image">Qr Code Image</string>
    <string name="ui_base_back">Back</string>
    <string name="ui_base_exit">Exit System</string>
    <string name="background_menu_settings">Menu Settings</string>
    <string name="background_menu_set_tool">Set Tool</string>
    <string name="background_menu_func_set">Function Settings</string>
    <string name="background_menu_drop_sensor_whole">Whole Machine Drop Detection</string>
    <string name="background_menu_enable_bill_escrow">Bill Can Be Returned</string>
    <string name="background_menu_enable_change">Coins Can Be Given as Change</string>
    <string name="background_menu_give_change_direct">Give Change Directly</string>
    <string name="background_menu_glass_demist_enable">Glass Defogging</string>
    <string name="background_serial_port_setup">Serial Port Setup</string>
    <string name="serial_port_motherboard_serial">Motherboard Serial Port</string>
    <string name="serial_port_motherboard_baud_rate">Motherboard Baud Rate</string>
    <string name="serial_port_server_serial">Secondary Cabinet Serial Port</string>
    <string name="background_drive_spring_set">Spring Machine Settings</string>
    <string name="background_drive_lift_set">Lift Machine Settings</string>
    <string name="background_drive_lattice_set">Grid Machine Settings</string>
    <string name="background_drive_coff_set">Coffee Machine Settings</string>
    <string name="background_drive_snake_set">Snake Machine Settings</string>
    <string name="background_drive_light_set">Light Strip Settings</string>
    <string name="background_drive_setting">Setting</string>
    <string name="background_drive_tips_input_slotno">Please enter the slot number!</string>
    <string name="background_drive_tips_select_cabinetno">Please select a cabinet number</string>
    <string name="background_drive_modify_ask">Confirm modification?</string>
    <string name="background_drive_set">Set</string>
    <string name="background_drive_query">Query</string>
    <string name="background_drive_clean">Clear</string>
    <string name="background_drive_clean_fault">Clear Drive Board Fault</string>
    <string name="background_drive_query_slot">Query Slot</string>
    <string name="background_drive_query_fault">Query Drive Board Fault</string>
    <string name="background_spring_self_check">Self-Check</string>
    <string name="background_spring_reset">Reset</string>
    <string name="background_spring_set_heat_cool">Turn Cooling (Heating) On or Off</string>
    <string name="background_spring_set_temp">Target Temperature for Cooling (Heating)</string>
    <string name="background_spring_glass_heat_open">Turn On Glass Heating</string>
    <string name="background_spring_glass_heat_close">Turn Off Glass Heating</string>
    <string name="background_spring_led_open">Turn On LED Light Strip</string>
    <string name="background_spring_led_close">Turn Off LED Light Strip</string>
    <string name="background_spring_buzzer_open">Turn On Buzzer</string>
    <string name="background_spring_buzzer_close">Turn Off Buzzer</string>
    <string name="background_spring_double_ask">Confirm merging with the next slot?</string>
    <string name="background_spring_set_slot_spring">Set as Spring Slot (Use with Caution!)</string>
    <string name="background_spring_set_slot_belts">Set as Belt Slot (Use with Caution!)</string>
    <string name="background_spring_set_slot_spring_all">Set All as Spring Slots (Use with Caution!)</string>
    <string name="background_spring_set_slot_belts_all">Set All as Belt Slots (Use with Caution!)</string>
    <string name="background_spring_set_single_slot">Split into Single Slot (Use with Caution!)</string>
    <string name="background_spring_set_single">Split</string>
    <string name="background_spring_set_double_slot">Merge with Next Slot as Double Slot (Use with Caution!)</string>
    <string name="background_spring_set_double">Merge</string>
    <string name="background_spring_set_single_slot_all">Set All as Single Slots (Use with Caution!)</string>
    <string name="background_spring_test_mode">Test Mode (Power Off to Stop)</string>
    <string name="background_backgroound_ensure">Confirm</string>
    <string name="background_backgroound_cancel">Cancel</string>
    <string name="background_lift_tips_select_control_action">Please select a control action!</string>
    <string name="background_lift_tips_select_query_parameters">Please select query parameters!</string>
    <string name="background_lift_tips_select_set_parameters">Please select the parameters to set!</string>
    <string name="background_lift_tips_set_value_canont_empty">The value to be set cannot be empty!</string>
    <string name="background_notify_contact_merchant">Please contact the merchant</string>
    <string name="background_drive_tips_clean_fault_success">Fault cleared successfully</string>
    <string name="background_drive_tips_no_fault">No fault</string>
    <string name="background_drive_tips_have_fault">Fault detected</string>
    <string name="ui_base_notify_coin_back">Returning Coins</string>
    <string name="ui_base_notify_coinback_success">Coin Return Successful</string>
    <string name="ui_base_notify_coinback_fail">Coin Return Failed</string>
    <string name="ui_base_notify_slot">Slot: </string>
    <string name="ui_base_notify_not_open">Not Open Yet</string>
    <string name="ui_base_notify_loading">Loading</string>
    <string name="ui_base_notify_load_fail">Load Failed</string>
    <string name="ui_base_notify_invalid_slot">Invalid Slot</string>
    <string name="ui_base_notify_sys_busy">System Busy</string>
    <string name="ui_base_notify_slot_faultSlot">Faulty Slot</string>
    <string name="ui_base_notify_slot_fault">Faulty Slot: </string>
    <string name="ui_base_notify_slot_code">Fault Code: </string>
    <string name="ui_base_notify_slot_err">Fault: </string>
    <string name="ui_base_notify_sold_out">This product is sold out, please choose another product!</string>
    <string name="ui_base_notify_select_other">Please select another product!</string>
    <string name="background_lat_start_cabinetno">Starting Grid Number</string>
    <string name="background_lat_start_row">Starting Row</string>
    <string name="background_lat_end_cabinetno">Ending Grid Number</string>
    <string name="background_lat_open_cabinetno">Open Grid</string>
    <string name="background_lat_end_column">Ending Column</string>
    <string name="background_lat_end_row">Ending Row</string>
    <string name="background_lat_invaild">Invalid</string>
    <string name="background_lat_row">Row (1-10)</string>
    <string name="background_lat_set_scan_light">Scan Light Setting</string>
    <string name="background_lat_set_vaild">Set Grid as Valid</string>
    <string name="background_lat_start_column">Starting Column</string>
</resources>